--- a/index.html
+++ b/index.html
@@ -33,14 +33,15 @@
           <div class="skill-row">
             <img class="" src="images/chillies.png" alt="">
             <h3>Data analysis</h3>
-            <p>Lorem ipsum dolor sit amet, mauris sed consectetuer. Etiam et eu, bibendum interdum, lacus quis mauris. Curabitur wisi, quisque vel eu, rutrum nam.</p>
+            <p>Specialize in gathering information and providing solution through data.</p>
           </div>
         </div>
         <hr>
         <div class="contact-me">
           <h2>Get In Touch</h2>
-          <h3>Lorem ipsum dolor sit amet, non elit.</h3>
-          <p>Lorem ipsum dolor sit amet, in quis, aenean amet. Phasellus sodales, tellus donec dui, ornare erat.</p>
+          <h3>I Love You</h3>
+           <h2><strong>JHEMIN ROSE ARTILLAGA</STRONG></h2>
+
           <a class="btn" href="mailto:rgcorabo@gmail.com">CONTACT ME</a>
         </div>
       </div>
@@ -48,8 +49,8 @@
       
       <div class="bottom-container">
         <a class="footer-link" href="https://www.linkedin.com/">LinkedIn</a>
-        <a class="footer-link" href="https://twitter.com/">Twitter</a>
-        <a class="footer-link" href="https://www.appbrewery.co/">Website</a>
+        <a class="footer-link" href="https://facebook.com/corabo">Facebook</a>
+        <a class="footer-link" href="https://xyntaxr.github.io/cv/">Website</a>
         <p>© Richard Gil Corabo.</p>
       </div>
       
