--- a/index.html
+++ b/index.html
@@ -19,8 +19,9 @@
         <div class="profile">
           <img src="" alt="">
           <h2>Hello.</h2>
-          <p>I love solving problems and upscaling my skills. </p>
-          <p>I do learning as a hobby.</p>
+          <p class="intro">Welcome to my page.</p>
+          <p class="intro">I love solving problems and upscaling my skills. </p>
+          <p class="intro">I do learning as a hobby.</p>
         </div>
         <hr>
         <div class="skills">
@@ -45,7 +46,7 @@
         <div class="contact-me">
           <h2>Get In Touch</h2>
           <h3>To God be the Glory.</h3>
-          <p>Keep safe !</p>
+          <p class="contact">If ever you are interested,</p>
           <a class="btn" href="mailto:rgcorabo@gmail.com">CONTACT ME</a>
         </div>
       </div>
@@ -55,7 +56,7 @@
         <a class="footer-link" href="https://www.linkedin.com/"><img class="link" src="images/link.png" alt="logoli"></a>
         <a class="footer-link" href="https://github.com/xyntaxR"><img class="link" src="images/git.png" alt=""></a>
         <a class="footer-link" href="https://facebook.com/corabo"><img class="link" src="images/fb.png" alt=""></a>
-        <p>© Richard Gil Corabo.</p>
+        <p >© Richard Gil Corabo.</p>
       </div>
       
 </body>
