--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         <a class="footer-link" href="https://www.linkedin.com/"><img class="link" src="images/link.png" alt="logoli"></a>
         <a class="footer-link" href="https://github.com/xyntaxR"><img class="link" src="images/git.png" alt=""></a>
         <a class="footer-link" href="https://facebook.com/corabo"><img class="link" src="images/fb.png" alt=""></a>
-        <p >© Richard Gil Corabo.</p>
+        <p class="copyright">© Richard Gil Corabo.</p>
       </div>
       
 </body>
