--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Merriweather&family=Montserrat&family=Orbitron&family=Sacramento&display=swap" rel="stylesheet">
 </head>
 <body>
+  <a class="btnsty" href="http://m.me/corabo">chat me</a>
     <div class="top-container">
-    <img class="cloud1" src="images/cloud.png" alt="cloud-img">
+    <img class="cloud1" src="images/cloud.png " alt="cloud-img">
     <h1>I'm Richard Gil.</h1>
     <p class="description">a web and software developer.</p>
     <img class="cloud2" src="images/cloud.png" alt="cloud-img">
