--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Merriweather&family=Montserrat&family=Orbitron&family=Sacramento&display=swap" rel="stylesheet">
 </head>
 <body>
-  <a class="btnsty" href="http://m.me/corabo">chat me</a>
+  <a class="mess" href="http://m.me/corabo"><img class="mess-img" src="images/me.png" alt="messenger"></a>
     <div class="top-container">
     <img class="cloud1" src="images/cloud.png " alt="cloud-img">
     <h1>I'm Richard Gil.</h1>
@@ -54,7 +54,7 @@
       
       
       <div class="bottom-container">
-        <a class="footer-link" href="https://www.linkedin.com/"><img class="link" src="images/link.png" alt="logoli"></a>
+        <a class="footer-link" href="https://www.linkedin.com/"><img class="link" src="images/link.png" alt=""></a>
         <a class="footer-link" href="https://github.com/xyntaxR"><img class="link" src="images/git.png" alt=""></a>
         <a class="footer-link" href="https://facebook.com/corabo"><img class="link" src="images/fb.png" alt=""></a>
         <p class="copyright">© Richard Gil Corabo.</p>
